# django4-bug-ordering-with-functions

./: .envrc  pyproject.toml
dj4bug/: asgi.py  settings.py  urls.py  wsgi.py
dj4bug/buggy/: models.py
dj4bug/masked/: models.py  tests.py
dj4bug/nonbuggy/: models.py
